# lz4-streamer

./: Cargo.toml
decoder/: Cargo.toml
decoder/src/: main.rs
encoder/: Cargo.toml
encoder/src/: main.rs
src/: main.rs
